# UAV-Control-Interface

./: README.md
AI-Touch-Interface/dev/: draw.kv
AI-Touch-Interface/dev/src/: robot.py  tracer.py
ai-touch-interface/dev/: draw.kv  main.py
ai-touch-interface/dev/model/: recognizer_1.pkl
ai-touch-interface/dev/src/: glob.py  imglayout.py  mymath.py  robot.py  tracer.py  util.py
collector/collect/: main.py  q3.py
collector/collect/data/: horizontal.txt
collector/collect/model/: model.pkl
collector/collect/src/: collector.py  glob.py  tracer.py  util.py
recognizoer/: make_prediction.py  predict_pure.py  q3.py
recognizoer/data/: check.txt  check_reverse.txt  lbtort.txt  lttorb.txt  s.txt  vertical.txt
server/: catkin_ws.tar  offline_server.py  touch_interface_server.py  touch_interface_server_swarm.py  tracking_empty_1.py  tracking_empty_2.py  tracking_empty_3.py
server/rotors_gazebo/: CMakeLists.txt
server/rotors_gazebo/launch/: crai_firefly_swarm.launch  crai_tracking_city_1.launch  crai_tracking_empty_1.launch  crai_tracking_empty_3.launch  crai_tracking_empty_4.launch
server/rotors_gazebo/model/tree_simple/scripts/: tree_simple.material
server/rotors_gazebo/src/: hovering_example5.cpp  hovering_example6.cpp
server/rotors_gazebo/worlds/: forest_updated.world
test/catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
test/catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
test/catkin_ws/devel/.private/bebop_description/: .catkin  .rosinstall  local_setup.sh  setup.sh
test/catkin_ws/devel/.private/bebop_driver/: .catkin  .rosinstall  local_setup.sh  setup.sh
test/catkin_ws/devel/.private/bebop_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
test/catkin_ws/devel/.private/bebop_simulator/: .catkin  .rosinstall  local_setup.sh  setup.sh
test/catkin_ws/devel/.private/bebop_tools/: .catkin  .rosinstall  local_setup.sh  setup.sh
test/catkin_ws/devel/.private/beginner_tutorials/: .catkin  .rosinstall  local_setup.sh  setup.sh
test/catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
test/catkin_ws/devel/.private/mav_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
test/catkin_ws/devel/.private/planning_msgs/: .catkin  setup.sh  (+2 more)
test/catkin_ws/logs/rotors_gazebo_plugins/: build.make.000.log.stderr
test/catkin_ws/src/beginner_tutorials/: package.xml
(+720 files in other folders)
